--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section id="testimonios" class="testimonios">
             <h2>Testimonios</h2>
             <div class="testimonio">
-                <p>"Excelente servicio y productos de buena calidad."</p>
+                <p>"Excelente servicio y productos de muy buena calidad."</p>
                 
             </div>
             <div class="testimonio">
